# agent-sdk-workshop

./: .gitignore  DESIGN.md  README.md  check_setup.py  requirements.txt  workshop
.claude/commands/: aws-lambda-durable-functions.md
01-guided-demo/: GUIDE.md  README.md  agent.py  config.py  memory.py  pyproject.toml  subagents.py  tools.py
01-guided-demo/mock_data/: bucklefern_commerce_holdings.json  ironvane_freight_systems.json  tinplate_merchant_systems.json
02-breakouts/: COMPONENTS.md  README.md  pyproject.toml
02-breakouts/00-warmup/: README.md  config.py  run.py
02-breakouts/_shared/: agent_base.py  subagent_library.py  tool_library.py
02-breakouts/account-intelligence/: GOLD.md  README.md  (+2 more)
03-durable-functions/: Dockerfile  README.md  pyproject.toml  requirements.txt  response.json
03-durable-functions/examples/01_basic_durable_agent/: README.md  handler.py
03-durable-functions/examples/02_human_approval_agent/: README.md  handler.py
03-durable-functions/examples/03_multi_agent_orchestrator/: README.md  handler.py
03-durable-functions/infrastructure/: deploy.sh  response.json  samconfig.toml  template.yaml
03-durable-functions/infrastructure/.aws-sam/: build.toml
03-durable-functions/lib/: __init__.py  claude_durable.py
03-durable-functions/tests/: test_basic_agent.py
bedrock/: 00-key-concepts.md  01-lab-1  02-lab-two.md  03-lab-three.md  04-lab-four.md
docs/: CHEATSHEET.md  FAQ.md  TROUBLESHOOTING.md
extend/: README.md  add-a-breakout.md  add-a-subagent.md  add-a-tool.md  connect-a-real-api.md  ideas.md  structured-output.md
(+36 files in other folders)
